tolk-tester/tests/invalid-semantics/err-4311.tolk
fun main(): int {
    var x: int;
    x;
    return 0;
}

/**
@compilation_should_fail
@stderr using variable `x` before it's definitely assigned
 */
